# cr_tools

./: pyproject.toml
.github/workflows/: publish.yml
cr_tools/doc/: bib.sh  elsevier-harvard.csl
test/doc/: bib.bib
