[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cr_tools*"]

[project]
name = "cr_tools"
version = "0.0.0"
description = "一个实用工具库。"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
authors = [
  { name = "Rong Cheng", email = "chengrong@tju.edu.cn" }
]
dependencies = [
    "setuptools>=80.9.0",
    "ipdb>=0.13.13",
    "bibtexparser>=1.4.3",
    "citeproc-py>=0.9.0",
    "citeproc-py-styles>=0.1.5",
]

[project.urls]
Homepage='https://github.com/cbxgss/cr_tools'
